# data-lakehouse

./: .gitignore  README.md  pyproject.toml  spec_data_lakehouse.md
.github/workflows/: dbt_ci.yml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: generate_trip_id.sql
dbt_project/models/marts/: _marts.yml  dim_zones.sql  fct_daily_trips.sql  fct_zone_metrics.sql
dbt_project/models/staging/: _sources.yml  _staging.yml  stg_fhv_trips.sql  stg_green_trips.sql  stg_taxi_zones.sql  stg_yellow_trips.sql
docs/: architecture.md  data_dictionary.md
scripts/: download_data.py  run_pipeline.py  setup_warehouse.py
